--- a/index.html
+++ b/index.html
@@ -47,7 +47,34 @@
 
         </main>
     </header>
-    <section class="propel"></section>
+
+    <section class="propel">
+        <div class="container">
+            <div class="title">
+                <h2>Promoting your business and services with  </h2>
+                <p> <h2>Propel:</h2> A responsive, multi-page business template with everything you need propel your business.</p>
+            </div>
+            <ul class="propel_list">
+                <li class="propel_item">
+                    <img src="./img/IMAGE (47).png" alt="png">
+                    <h4>Pro ad constituto</h4>
+                    <p>Ne usu illud albucius abhor reant, partiendo scriptorem mel ne.</p>
+                </li>
+
+                <li class="propel_item">
+                    <img src="./img/IMAGE (48).png" alt="png">
+                    <h4>Eam commodo</h4>
+                    <p>Fuisset intellegat delicatissimi ex mea. Cu probo integre nec.</p>
+                </li>
+
+                <li class="propel_item">
+                    <img src="./img/IMAGE (49).png" alt="png">
+                    <h4>Reformidans eis</h4>
+                    <p>Facer nostro causae ei sed. Vix ex quidam detraxit, vis ad nostro laoreet.</p>
+                </li>
+            </ul>
+        </div>
+    </section>
     
 </body>
 </html>
