the end section propel

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container">
             <div class="title">
                 <h2>Promoting your business and services with  </h2>
-                <p> <h2>Propel:</h2> A responsive, multi-page business template with everything you need propel your business.</p>
+                <p> <b> Propel:</b> A responsive, multi-page business template with everything you need propel your business.</p>
             </div>
             <ul class="propel_list">
                 <li class="propel_item">
@@ -75,6 +75,7 @@
             </ul>
         </div>
     </section>
+    section.
     
 </body>
 </html>
