--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
             </ul>
         </div>
     </section>
-    section.
+    <section class="look">
+        
+    </section>
     
 </body>
 </html>
