the end section decore

--- a/index.html
+++ b/index.html
@@ -76,7 +76,13 @@
         </div>
     </section>
     <section class="look">
-        
+
+    </section>
+    <section class="decore">
+        <div class="container">
+            <p> <b> Illud decore voluptaria has at.</b> Hinc invenire atomorum no vel. Ut vis nullam blandit neglegentur, omittam perpetua voluptatum qui eu. Iusto laoreet suscipit vis ad, ad ferri tempor duo.</p>
+            <a href="#">More About Us</a>
+        </div>
     </section>
     
 </body>
