the end sectinon tempor, start section elit

--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
             <a href="#">More About Us</a>
         </div>
     </section>
+    <section class="tempor">
+        <div class="container">
+            <div class="tempor_img">
+                <img src="./img/IMAGE (51).png" alt="png">
+            </div>
+            <div class="tempor_text">
+                <h2>Ex tempor euismod sapientem ouis lexor pro. <h3> Ad vix dicta iudico singulis, ius ex mollis veritus.</h3></h2>
+                <p>Possit tritani consectetuer eu his, nusquam minimum ut per, eu eos ocurreret splendide hendrerit. Dicant placerat democritum eos id, sit mollis invidunt mediocritatem ei, ne fuisset dolores periculis sed.</p>
+            </div>
+        </div>
+    </section>
+    <section class="elit"></section>
     
 </body>
 </html>
