the end section elit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/staly.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar">
@@ -51,8 +53,9 @@
     <section class="propel">
         <div class="container">
             <div class="title">
-                <h2>Promoting your business and services with  </h2>
-                <p> <b> Propel:</b> A responsive, multi-page business template with everything you need propel your business.</p>
+                <h2>Promoting your business and services with </h2>
+                <p> <b> Propel:</b> A responsive, multi-page business template with everything you need propel your
+                    business.</p>
             </div>
             <ul class="propel_list">
                 <li class="propel_item">
@@ -80,7 +83,8 @@
     </section>
     <section class="decore">
         <div class="container">
-            <p> <b> Illud decore voluptaria has at.</b> Hinc invenire atomorum no vel. Ut vis nullam blandit neglegentur, omittam perpetua voluptatum qui eu. Iusto laoreet suscipit vis ad, ad ferri tempor duo.</p>
+            <p> <b> Illud decore voluptaria has at.</b> Hinc invenire atomorum no vel. Ut vis nullam blandit
+                neglegentur, omittam perpetua voluptatum qui eu. Iusto laoreet suscipit vis ad, ad ferri tempor duo.</p>
             <a href="#">More About Us</a>
         </div>
     </section>
@@ -90,12 +94,34 @@
                 <img src="./img/IMAGE (51).png" alt="png">
             </div>
             <div class="tempor_text">
-                <h2>Ex tempor euismod sapientem ouis lexor pro. <h3> Ad vix dicta iudico singulis, ius ex mollis veritus.</h3></h2>
-                <p>Possit tritani consectetuer eu his, nusquam minimum ut per, eu eos ocurreret splendide hendrerit. Dicant placerat democritum eos id, sit mollis invidunt mediocritatem ei, ne fuisset dolores periculis sed.</p>
+                <h2>Ex tempor euismod sapientem ouis lexor pro. <h3> Ad vix dicta iudico singulis, ius ex mollis
+                        veritus.</h3>
+                </h2>
+                <p>Possit tritani consectetuer eu his, nusquam minimum ut per, eu eos ocurreret splendide hendrerit.
+                    Dicant placerat democritum eos id, sit mollis invidunt mediocritatem ei, ne fuisset dolores
+                    periculis sed.</p>
             </div>
         </div>
     </section>
-    <section class="elit"></section>
+    <section class="elit">
+        <div class="container">
+            <div class="elit_number">
+                <div class="elit_text">
+                    <h3>Te elit antiopam vix zril recusabo ut pri <p>Quas suscipit ad mea verear vivendo tincidunt.</p></h3> 
+                    <p class="elit_subtext">Pri cu dico labores officiis, odio principes complectitur ad sea. Sea id doctus forensibus, nec lorem vocent aliquam eu. Aliquid definitiones id cum, ad meliore perpetua referrentur sed. Quas suscipit ad mea verear vivendo tincidunt.</p>
+                </div>
+                <div class="elit_img">
+                    <img src="./img/IMAGE (52).png" alt="png">
     
+                </div>
+            </div>
+            <div class="elit_title">
+                <h3>Wanna know more about the Premium deal?</h3>
+                <a href="#">See the full range of Premium</a>
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
