the end section party

--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
             </div>
         </div>
     </section>
+    <section class="party">
+        <div class="container">
+            <div class="party_text">
+                <a href="#">Party On -</a>
+                <h3>Quas suscipit ad mea. Pri cu dico labores officiis odio principes complectitur ad sea.</h3>
+            </div>
+            <div class="party_link">
+                <a href="#">Get Started</a>
+            </div>
+        </div>
+    </section>
 
 </body>
 
