--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/staly.css">
 </head>
 
@@ -132,6 +133,42 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <img src="./img/IMAGE (45).png" alt="">
+            <p>© 2018 Spoon Inc, All rights reserved.</p>
+            <ul>
+                <li>
+                    <a href="#">Features</a>
+
+                    <a href="#">Premium</a>
+
+                    <a href="#">Pricing</a>
+                </li>
+
+                <li>
+                    <a href="#">About</a>
+
+                    <a href="#">Blog</a>
+
+                    <a href="#">Contact</a>
+                </li>
+
+                <li>
+                    <a href="#">Image License Info</a>
+
+                
+                </li>
+
+               
+            </ul>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+
+
+        </div>
+    </footer>
 
 </body>
 
